[package]
name = "compio-ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket library for the compio runtime"
license = "MIT"

[dependencies]
compio = { version = "0.15.0", features = ["io", "io-compat", "macros"] }
tungstenite = "0.27.0"
compio-io = "0.7.0"
compio-net = "0.8"
compio-runtime = "0.8"
compio-buf = "0.6.0"
compio-tls = { version = "0.6", optional = true, features = ["rustls"] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
] }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "1.0.2", optional = true }
rustls-pemfile = "2.0"

[features]
default = []
rustls = ["dep:compio-tls", "dep:rustls", "compio-tls/rustls"]
rustls-native-certs = ["rustls", "dep:rustls-native-certs"]
webpki-roots = ["rustls", "dep:webpki-roots"]
