[package]
name = "compio-ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket library for the compio runtime"
license = "MIT"

[dependencies]
tungstenite = "0.27.0"
compio = { git = "https://github.com/compio-rs/compio.git", rev = "fe4243f0b6811ebc325afd081c9b087b4d9817be", features = [
    "io",
    "io-compat",
    "macros",
] }
compio-io = { git = "https://github.com/compio-rs/compio.git", rev = "fe4243f0b6811ebc325afd081c9b087b4d9817be" }
compio-net = { git = "https://github.com/compio-rs/compio.git", rev = "fe4243f0b6811ebc325afd081c9b087b4d9817be" }
compio-runtime = { git = "https://github.com/compio-rs/compio.git", rev = "fe4243f0b6811ebc325afd081c9b087b4d9817be" }
compio-buf = { git = "https://github.com/compio-rs/compio.git", rev = "fe4243f0b6811ebc325afd081c9b087b4d9817be" }
compio-tls = { git = "https://github.com/compio-rs/compio.git", rev = "fe4243f0b6811ebc325afd081c9b087b4d9817be", features = [
    "rustls",
], optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
] }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "1.0.2", optional = true }
rustls-pemfile = "2.0"

[features]
default = []
rustls = ["dep:compio-tls", "dep:rustls", "compio-tls/rustls"]
rustls-native-certs = ["rustls", "dep:rustls-native-certs"]
webpki-roots = ["rustls", "dep:webpki-roots"]

[dev-dependencies]
log = "0.4"
env_logger = "0.11"

[[example]]
name = "autobahn-client"
required-features = []

[[example]]
name = "autobahn-server"
required-features = []
