[package]
name = "compio-ws"
version = "0.1.0"
edition = "2021"
description = "WebSocket library for the compio runtime"
license = "MIT"

[dependencies]
tungstenite = "0.27.0"
compio = { version = "0.16.0", features = ["io", "io-compat", "macros"] }
compio-io = "0.8.1"
compio-net = { version = "0.9.0", optional = true }
compio-tls = { version = "0.7.0", features = [
    "rustls",
], optional = true, default-features = false }
compio-runtime = "0.9.3"
compio-buf = "0.7.0"
rustls = { version = "0.23.34", optional = true, default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
] }
rustls-native-certs = { version = "0.8", optional = true }
webpki-roots = { version = "1.0.2", optional = true }
rustls-pemfile = "2.0"
log = "0.4"

[features]
default = []
connect = ["dep:compio-net"]
rustls = ["connect", "dep:compio-tls", "dep:rustls", "compio-tls/rustls"]
rustls-native-certs = ["rustls", "dep:rustls-native-certs"]
webpki-roots = ["rustls", "dep:webpki-roots"]

[dev-dependencies]
log = "0.4"
env_logger = "0.11"

[[example]]
name = "autobahn-client"
required-features = []

[[example]]
name = "autobahn-server"
required-features = []
